// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildEvalPrompt > renders the all enabled-language prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** State persists per language across separate eval calls and tool calls — define helpers, datasets, and clients in one call, then later calls reuse them directly.

Work incrementally: imports in one call, define in the next, test, then use — each its own eval call. Re-run setup ONLY after \`reset\`, a kernel crash, or a \`NameError\`/\`ReferenceError\` proving the state is gone. Parallelize work *within* a cell with the \`parallel(thunks)\` helper, not by batching steps.

Fields:

- \`language\` — \`"py"\` IPython kernel, \`"js"\` persistent JavaScript VM, \`"rb"\` persistent Ruby kernel, \`"jl"\` persistent Julia kernel.
- \`code\` — cell body, verbatim. Newlines/quotes JSON-encoded; no fences, no headers.
- \`title\` (optional) — short transcript label (e.g. \`"imports"\`).
- \`timeout\` (optional) — seconds. Raise only for heavy compute or long delegated tool calls.
- \`reset\` (optional) — wipe this language's kernel first. Per-language: a \`py\` reset never touches the JS VM.

Live event loop: use top-level \`await\` directly; \`asyncio.run(...)\` raises "cannot be called from a running event loop".
JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.
Ruby: synchronous; helper options are keyword args; the last expression auto-displays unless it is \`nil\`, an assignment, or a definition.
Julia: synchronous; helper options are standard keyword args; the last expression auto-displays unless it is an assignment or a definition.
On error, fix and re-run only the failing step — prior calls' state survives.
</instruction>

<prelude>
Same helpers + arg order, both runtimes. Python: sync, options = trailing kwargs. JS: async/\`await\`able, options = ONE trailing object literal, never positional. Ruby: sync, options = trailing keyword args. Julia: sync, options = trailing keyword args.
\`\`\`
display(value) -> None
    Cell result; figures/images/dataframes shown natively.
print(value, ...) -> None
    Text stream.
read(path, offset?=1, limit?=None) -> str
    File as text; offset/limit are 1-indexed lines.
write(path, content) -> str
    Write file, creating parents, and return the resolved path.
env(key?=None, value?=None) -> str | None | dict
    No args -> full env dict; one -> value of key; two -> set key=value and return value.
tool.<name>(args) -> unknown
    Invoke any active session tool; args = its parameter object.
completion(prompt, model?="default", system?=None, schema?=None) -> str | dict
    Oneshot, stateless completion. model "default" uses the session model; schema is JSON Schema for structured results.
parallel(thunks) -> list
    Thunks through a bounded pool, input order kept; returns when all finish, a throwing thunk propagates.
pipeline(items, ...stages) -> list
    Map items through one-arg stages left-to-right, barrier between stages; stage 1 gets the item, later stages the previous result.
log(message) -> None
    Progress line above the status tree.
phase(title) -> None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>

<critical>
Prior top-level names survive into the next eval call — reuse them; NEVER re-import, re-require, or re-declare a helper. Re-read a file only if it may have changed since the last read. Re-run setup only after \`reset\`, a crash, or a \`NameError\`/\`ReferenceError\`.
</critical>",
  "promptGuidelines": [
    "Use eval for incremental code execution when a persistent JS, Python, Ruby, or Julia kernel is available.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;

exports[`buildEvalPrompt > renders the js enabled-language prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** State persists per language across separate eval calls and tool calls — define helpers, datasets, and clients in one call, then later calls reuse them directly.

Work incrementally: imports in one call, define in the next, test, then use — each its own eval call. Re-run setup ONLY after \`reset\`, a kernel crash, or a \`NameError\`/\`ReferenceError\` proving the state is gone. Parallelize work *within* a cell with the \`parallel(thunks)\` helper, not by batching steps.

Fields:

- \`language\` — \`"js"\` persistent JavaScript VM.
- \`code\` — cell body, verbatim. Newlines/quotes JSON-encoded; no fences, no headers.
- \`title\` (optional) — short transcript label (e.g. \`"imports"\`).
- \`timeout\` (optional) — seconds. Raise only for heavy compute or long delegated tool calls.
- \`reset\` (optional) — wipe this language's kernel first.

JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.

On error, fix and re-run only the failing step — prior calls' state survives.
</instruction>

<prelude>
Async/\`await\`able; options = ONE trailing object literal, never positional.
\`\`\`
display(value) -> None
    Cell result; figures/images/dataframes shown natively.
print(value, ...) -> None
    Text stream.
read(path, offset?=1, limit?=None) -> str
    File as text; offset/limit are 1-indexed lines.
write(path, content) -> str
    Write file, creating parents, and return the resolved path.
env(key?=None, value?=None) -> str | None | dict
    No args -> full env dict; one -> value of key; two -> set key=value and return value.
tool.<name>(args) -> unknown
    Invoke any active session tool; args = its parameter object.
completion(prompt, model?="default", system?=None, schema?=None) -> str | dict
    Oneshot, stateless completion. model "default" uses the session model; schema is JSON Schema for structured results.
parallel(thunks) -> list
    Thunks through a bounded pool, input order kept; returns when all finish, a throwing thunk propagates.
pipeline(items, ...stages) -> list
    Map items through one-arg stages left-to-right, barrier between stages; stage 1 gets the item, later stages the previous result.
log(message) -> None
    Progress line above the status tree.
phase(title) -> None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>

<critical>
Prior top-level names survive into the next eval call — reuse them; NEVER re-import, re-require, or re-declare a helper. Re-read a file only if it may have changed since the last read. Re-run setup only after \`reset\`, a crash, or a \`NameError\`/\`ReferenceError\`.
</critical>",
  "promptGuidelines": [
    "Use eval for incremental code execution when a persistent JS, Python, Ruby, or Julia kernel is available.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;

exports[`buildEvalPrompt > renders the js-py enabled-language prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** State persists per language across separate eval calls and tool calls — define helpers, datasets, and clients in one call, then later calls reuse them directly.

Work incrementally: imports in one call, define in the next, test, then use — each its own eval call. Re-run setup ONLY after \`reset\`, a kernel crash, or a \`NameError\`/\`ReferenceError\` proving the state is gone. Parallelize work *within* a cell with the \`parallel(thunks)\` helper, not by batching steps.

Fields:

- \`language\` — \`"py"\` IPython kernel, \`"js"\` persistent JavaScript VM.
- \`code\` — cell body, verbatim. Newlines/quotes JSON-encoded; no fences, no headers.
- \`title\` (optional) — short transcript label (e.g. \`"imports"\`).
- \`timeout\` (optional) — seconds. Raise only for heavy compute or long delegated tool calls.
- \`reset\` (optional) — wipe this language's kernel first. Per-language: a \`py\` reset never touches the JS VM.

Live event loop: use top-level \`await\` directly; \`asyncio.run(...)\` raises "cannot be called from a running event loop".
JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.

On error, fix and re-run only the failing step — prior calls' state survives.
</instruction>

<prelude>
Same helpers + arg order, both runtimes. Python: sync, options = trailing kwargs. JS: async/\`await\`able, options = ONE trailing object literal, never positional.
\`\`\`
display(value) -> None
    Cell result; figures/images/dataframes shown natively.
print(value, ...) -> None
    Text stream.
read(path, offset?=1, limit?=None) -> str
    File as text; offset/limit are 1-indexed lines.
write(path, content) -> str
    Write file, creating parents, and return the resolved path.
env(key?=None, value?=None) -> str | None | dict
    No args -> full env dict; one -> value of key; two -> set key=value and return value.
tool.<name>(args) -> unknown
    Invoke any active session tool; args = its parameter object.
completion(prompt, model?="default", system?=None, schema?=None) -> str | dict
    Oneshot, stateless completion. model "default" uses the session model; schema is JSON Schema for structured results.
parallel(thunks) -> list
    Thunks through a bounded pool, input order kept; returns when all finish, a throwing thunk propagates.
pipeline(items, ...stages) -> list
    Map items through one-arg stages left-to-right, barrier between stages; stage 1 gets the item, later stages the previous result.
log(message) -> None
    Progress line above the status tree.
phase(title) -> None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>

<critical>
Prior top-level names survive into the next eval call — reuse them; NEVER re-import, re-require, or re-declare a helper. Re-read a file only if it may have changed since the last read. Re-run setup only after \`reset\`, a crash, or a \`NameError\`/\`ReferenceError\`.
</critical>",
  "promptGuidelines": [
    "Use eval for incremental code execution when a persistent JS, Python, Ruby, or Julia kernel is available.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;
